Bug 48220 - [SNA] Broken arrows in Fluxbox
Summary: [SNA] Broken arrows in Fluxbox
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-02 16:08 UTC by Patrick Truebe
Modified: 2012-04-03 01:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg log (38.53 KB, text/x-log)
2012-04-02 16:08 UTC, Patrick Truebe
no flags Details
broken arrow (13.18 KB, image/jpeg)
2012-04-02 16:09 UTC, Patrick Truebe
no flags Details

Description Patrick Truebe 2012-04-02 16:08:29 UTC
Created attachment 59401 [details]
Xorg log

Bug description: When upgrading to xf86-video-intel-2.18.0 all arrows of Fluxbox 1.1.1 are broken. If SNA is disabled everything is okay, even with 2.18.0. With SNA it looks like only a half arrow is rendered.

System environment:
-- chipset: Arrandale (Intel(R) Core(TM) i5 CPU M 540  @ 2.53GHz)
-- system architecture: 64bit
-- xf86-video-intel: 2.18.0
-- xserver: 1.11.2
-- mesa: 7.11.2
-- libdrm: 2.4.29
-- kernel: 2.6.39.4
-- Linux distribution: Gentoo
-- Machine or mobo model: HP EliteBook 2740p
-- Display connector: eDP1

Linux laptop 2.6.39.4 #1 SMP PREEMPT Wed Mar 28 18:48:41 CEST 2012 x86_64 Intel(R) Core(TM) i5 CPU M 540 @ 2.53GHz GenuineIntel GNU/Linux

Reproducing steps:
1. Upgrade from 2.17.0 to 2.18.0.
2. Start X and fluxbox with default configuration.
Comment 1 Patrick Truebe 2012-04-02 16:09:38 UTC
Created attachment 59402 [details]
broken arrow
Comment 2 Chris Wilson 2012-04-03 01:19:48 UTC
commit 87a672dafd9d6f47f31b77b406b7f0fb2b4030ac
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Apr 3 09:24:06 2012 +0100

    sna: Apply CoordMode when computing point extents
    
    Reported-by: Patrick Truebe <eko-priv@gmx.net>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48220
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.