sna: Apply CoordMode when computing point extents

Reported-by: Patrick Truebe <eko-priv@gmx.net>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48220
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>